# specprograming

./: .gitignore  CMakeLists.txt  Mylab1.2.ipynb  Mylab1.ipynb  README.md  VHI_province_12_20250925_181947.txt  VHI_province_18_20250925_182044.txt  VHI_province_1_20250925_181929.txt  VHI_province_21_20250925_181959.txt  VHI_province_24_20250925_182004.txt  VHI_province_2_20250925_181931.txt  VHI_province_4_20250925_181934.txt  VHI_province_9_20250925_181942.txt  lab1  preinstall.sh  run.sh
Lab1_Lab1.2/: Mylab1.2.ipynb  Mylab1.ipynb  README.md
VHI_data/: VHI_province_10_20251001_215606.txt  VHI_province_11_20251001_215608.txt  VHI_province_13_20251001_215610.txt  VHI_province_14_20251001_215611.txt  VHI_province_15_20251001_215612.txt  VHI_province_16_20251001_215614.txt  VHI_province_17_20251001_215614.txt  VHI_province_19_20251001_215616.txt  VHI_province_20_20251001_215618.txt  VHI_province_22_20251001_215620.txt  VHI_province_23_20251001_215621.txt  VHI_province_25_20251001_215623.txt  VHI_province_26_20251001_215624.txt  VHI_province_27_20251001_215625.txt  VHI_province_3_20251001_215556.txt  VHI_province_5_20251001_215600.txt  VHI_province_6_20251001_215601.txt  VHI_province_7_20251001_215602.txt  VHI_province_8_20251001_215604.txt
lab3_folder/: README.md  run.sh
lab4_folder/: .gitignore  CMakeLists.txt  README.md  run.sh
lab4_folder/src/: Display.cpp  Display.hpp  Filters.cpp  Filters.hpp  main.cpp
laboratory3/: .gitignore
src/: Camera.cpp  Display.cpp  Display.hpp  Display.сpp  FaceDetector.cpp  FaceDetector.hpp  main.cpp  main.сpp
(+2 files in other folders)
